ProductList read_one view - implemented filtering and sorting
